# clangJIT

./: .gitignore  CMakeLists.txt  README.md  travisRun.sh
cmake/: cmakeScripLoader.cmake  funcRedirectConfig.cmake
cmake/templates/: CMakeLists.exe.txt  CMakeLists.lib.txt  defines.in.hpp
include/: defines.hpp
src/: CMakeLists.txt  CodeWriterBase.cpp  CodeWriterBase.hpp  FuncRedirect.cpp  FuncRedirect.hpp  MemProtectBase.cpp  MemProtectBase.hpp  Redirector.cpp  Redirector.hpp
src/posix/: MemProtectPosix.cpp  MemProtectPosix.hpp
src/x86/: CodeWriterX86.cpp  CodeWriterX86.hpp
tests/: CMakeLists.txt  main.cpp
